$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2008-08-12 [A] FTP servers can now be added, edited, deleted from Coppermine {zmarty}
2008-08-12 [B] API category list should work now {daorange}
2008-08-11 [B] Added ability to filter API album list by category and picture list by album {daorange}
2008-08-10 [A] Added API search, partial category list {daorange}
2008-08-03 [A] First version of the SSH2/SFTP module {zmarty}
2008-07-30 [A] Created the first version of the FTP Storage module config tab, in admin.php {zmarty}
2008-07-30 [A] Coded a way for storage module to register config tabs for admin.php {zmarty}
2008-07-26 [A] The active storage module can be configured in admin.php {zmarty}
2008-07-22 [A] Files can now be renamed when using the FTP module + bugfixes {zmarty}
2008-07-16 [B] Removed useless echo of "pzida" that someone (probably me) accidentally put in index.php
2008-07-16 [A] Beginnings of the API album list function
2008-07-10 [B] Fixed API upload permissions - different user groups now respected {daorange}
2008-07-06 [B] Fixed a general Coppermine bug that prevented editing images containing a tilda ~ {zmarty}
2008-07-06 [B] Fixed the loading of images in pic_editor.php when the filename contains a tilda ~ {zmarty}
2008-07-06 [B] De-activated the ftp storage module, was activated by default {zmarty}
2008-07-06 [A] User-based sharding now works {zmarty}
2008-07-06 [B] Fixed FTP-related table indexes in schema.sql {zmarty}
2008-07-05 [A] API picture uploads are now possible.  Note that I added "if (!defined('API_CALL'))" in a few places {daorange}