@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-08-12 [A] Images can now be deleted from editpics.php via the storage modules {zmarty}
 2008-08-12 [A] FTP servers can now be added, edited, deleted from Coppermine {zmarty}
 2008-08-12 [B] API category list should work now {daorange}
 2008-08-11 [B] Added ability to filter API album list by category and picture list by album {daorange}
